food is now on food folder

--- a/InsertNameHere.html
+++ b/InsertNameHere.html
@@ -25,38 +25,38 @@ function preload(){
 	game.load.image('plate1', 'dish1plate.png');
 	//sprite for dish2
     game.load.image('plate2', 'dish2plate.png');
-    game.load.image('ticket', 'ticket.png');
+    game.load.image('ticket', 'food/ticket.png');
 	//sprite for tomato
-    game.load.spritesheet('tomato', 'foodTomato_SpriteSheet.png', 70,70);
-    game.load.spritesheet('tomatoRot', 'RottenTomato_SpriteSheet.png', 70,70);
-    game.load.image('tomato2', 'foodTomato_static.png');
-    game.load.image('tomato_dead', 'tomatoDead.png');
+    game.load.spritesheet('tomato', 'food/foodTomato_SpriteSheet.png', 70,70);
+    game.load.spritesheet('tomatoRot', 'food/RottenTomato_SpriteSheet.png', 70,70);
+    game.load.image('tomato2', 'food/foodTomato_static.png');
+    game.load.image('tomato_dead', 'food/tomatoDead.png');
 	//sprite for steak
-    game.load.spritesheet('steak', 'foodSteak_SpriteSheet.png',70,100);	
-    game.load.spritesheet('steakRot', 'RottenSteak_SpriteSheet.png',70,100);	
-    game.load.image('steak2', 'foodSteak_static.png');
-    game.load.image('steak_dead', 'steakDead.png');
+    game.load.spritesheet('steak', 'food/foodSteak_SpriteSheet.png',70,100);	
+    game.load.spritesheet('steakRot', 'food/RottenSteak_SpriteSheet.png',70,100);	
+    game.load.image('steak2', 'food/foodSteak_static.png');
+    game.load.image('steak_dead', 'food/steakDead.png');
 	//sprite for pepper
-	game.load.spritesheet('pepper', 'foodPepper_SpriteSheet.png',50,80);
-	game.load.spritesheet('pepperRot', 'RottenPepper_SpriteSheet.png',50,80);
-    game.load.image('pepper2', 'foodPepper_static.png');
-    game.load.image('pepper_dead', 'pepperDead.png');
+	game.load.spritesheet('pepper', 'food/foodPepper_SpriteSheet.png',50,80);
+	game.load.spritesheet('pepperRot', 'food/RottenPepper_SpriteSheet.png',50,80);
+    game.load.image('pepper2', 'food/foodPepper_static.png');
+    game.load.image('pepper_dead', 'food/pepperDead.png');
 	//sprite for wing
-    game.load.spritesheet('wing', 'foodWing_SpriteSheet.png',55,60);
-    game.load.spritesheet('wingRot', 'RottenWing_SpriteSheet.png',55,60);
-    game.load.image('wing2', 'foodWing_static.png');
-    game.load.image('wing_dead', 'wingDead.png');
+    game.load.spritesheet('wing', 'food/foodWing_SpriteSheet.png',55,60);
+    game.load.spritesheet('wingRot', 'food/RottenWing_SpriteSheet.png',55,60);
+    game.load.image('wing2', 'food/foodWing_static.png');
+    game.load.image('wing_dead', 'food/wingDead.png');
 	//sprite for potato
-	game.load.spritesheet('potato', 'foodPotato_SpriteSheet.png',75,100);
-	game.load.spritesheet('potatoRot', 'RottenPotato_SpriteSheet.png',75,100);
-    game.load.image('potato2', 'foodPotato_static.png');
-    game.load.image('potato_dead', 'potatoDead.png');
+	game.load.spritesheet('potato', 'food/foodPotato_SpriteSheet.png',75,100);
+	game.load.spritesheet('potatoRot', 'food/RottenPotato_SpriteSheet.png',75,100);
+    game.load.image('potato2', 'food/foodPotato_static.png');
+    game.load.image('potato_dead', 'food/potatoDead.png');
 	//sprite for celery
-	game.load.spritesheet('celery', 'foodCelery_SpriteSheet.png',90,190);
-	game.load.spritesheet('celeryRot', 'RottenCelery_SpriteSheet.png',90,190);
-    game.load.image('celery2', 'foodCelery_static.png');
+	game.load.spritesheet('celery', 'food/foodCelery_SpriteSheet.png',90,190);
+	game.load.spritesheet('celeryRot', 'food/RottenCelery_SpriteSheet.png',90,190);
+    game.load.image('celery2', 'food/foodCelery_static.png');
 
-    game.load.image('celery_dead', 'celeryDead.png');
+    game.load.image('celery_dead', 'food/celeryDead.png');
 	//font
     game.load.bitmapFont('desyrel', 'desyrel.png', 'desyrel.xml');
 }
