--- a/InsertNameHere.html
+++ b/InsertNameHere.html
@@ -19,6 +19,9 @@ sound
 */
 
 function preload(){
+
+	//video
+	game.load.video('video1', 'food/opening/Take2c.mp4');
 	//background
 	game.load.image ('background', 'Proj2_Background (1).png');
     //sprite for dish1
@@ -60,6 +63,7 @@ function preload(){
 	//font
     game.load.bitmapFont('desyrel', 'desyrel.png', 'desyrel.xml');
 }
+var vidDone=false;
 var atexst;
 var atexst2;
 var text1;
@@ -115,10 +119,18 @@ var stateText;
 var deadFood = [];
 //variable for 30 second warning
 var warningText;
+var video;
+var sprite1;
 function create()
 {
-	stateText=game.add.bitmapText(600,10,'desyrel','',16);
 	game.add.image(0,0, 'background');
+	gameStartText = game.add.text(game.world.centerX, 500, 'Tap anywhere to start.', { font: "40px Arial", fill: "#ffffff", align: "center" });
+	video = game.add.video('video1');
+	video.play(false);    
+	sprite1 = video.addToWorld(0,0 );
+
+	stateText=game.add.bitmapText(600,10,'desyrel','',16);
+	
 	//time elapsed
     timerText = game.add.bitmapText(10, 10, 'desyrel', '', 32);
     scoreText = game.add.bitmapText(800, 10, 'desyrel', '', 32);
@@ -215,7 +227,7 @@ function create()
 		createDish2();
     }
 	//Menu
-	gameStartText = game.add.text(game.world.centerX, 500, 'Tap anywhere to start.', { font: "40px Arial", fill: "#ffffff", align: "center" });
+	
     gameStartText.anchor.setTo(.5, .5);
     stateText=game.add.bitmapText(600,10,'desyrel','',16);
 	game.input.onDown.add(beginGame, this);
@@ -291,7 +303,10 @@ function create()
 	game.input.onDown.add(setDragT, this);
 	game.input.onUp.add(setDragF, this);
 }
-
+function vidIsDone(){
+	vidDone=true;
+	sprite1.destroy();
+}
 function setDragT()
 {
 	isDrag=true;
@@ -314,6 +329,7 @@ function beginGame()
 }
 function update()
 {
+	if(vidDone===false){video.onComplete.add(vidIsDone, this);}
 	// make a function that checks if the dishes are complete
 	if(canSpawn)
 	{
@@ -1449,6 +1465,7 @@ function resetCelery(item)
 
 function render() {
 
+	game.debug.text('text: '+vidDone,32,32);
 /*	for (var i = 0, len = peppers.children.length; i < len; i++){
 		
 		game.debug.body(peppers.children[i]);
