--- a/InsertNameHere.html
+++ b/InsertNameHere.html
@@ -29,32 +29,32 @@ function preload(){
 	//sprite for tomato
     game.load.spritesheet('tomato', 'foodTomato_SpriteSheet.png', 70,70);
     game.load.spritesheet('tomatoRot', 'RottenTomato_SpriteSheet.png', 70,70);
-    game.load.image('tomato2', 'foodTomato_static.png');
+    game.load.image('tomato2', 'tomatoDead.png');
     game.load.image('tomato_dead', 'tomatoDead.png');
 	//sprite for steak
     game.load.spritesheet('steak', 'foodSteak_SpriteSheet.png',70,100);	
     game.load.spritesheet('steakRot', 'RottenSteak_SpriteSheet.png',70,100);	
-    game.load.image('steak2', 'foodSteak_static.png');
+    game.load.image('steak2', 'steakDead.png');
     game.load.image('steak_dead', 'steakDead.png');
 	//sprite for pepper
 	game.load.spritesheet('pepper', 'foodPepper_SpriteSheet.png',50,80);
 	game.load.spritesheet('pepperRot', 'RottenPepper_SpriteSheet.png',50,80);
-    game.load.image('pepper2', 'foodPepper_static.png');
+    game.load.image('pepper2', 'pepperDead.png');
     game.load.image('pepper_dead', 'pepperDead.png');
 	//sprite for wing
     game.load.spritesheet('wing', 'foodWing_SpriteSheet.png',55,60);
     game.load.spritesheet('wingRot', 'RottenWing_SpriteSheet.png',55,60);
-    game.load.image('wing2', 'foodWing_static.png');
+    game.load.image('wing2', 'wingDead.png');
     game.load.image('wing_dead', 'wingDead.png');
 	//sprite for potato
 	game.load.spritesheet('potato', 'foodPotato_SpriteSheet.png',75,100);
 	game.load.spritesheet('potatoRot', 'RottenPotato_SpriteSheet.png',75,100);
-    game.load.image('potato2', 'foodPotato_static.png');
+    game.load.image('potato2', 'potatoDead.png');
     game.load.image('potato_dead', 'potatoDead.png');
 	//sprite for celery
 	game.load.spritesheet('celery', 'foodCelery_SpriteSheet.png',90,190);
 	game.load.spritesheet('celeryRot', 'RottenCelery_SpriteSheet.png',90,190);
-    game.load.image('celery2', 'foodCelery_static.png');
+    game.load.image('celery2', 'celeryDead.png');
 
     game.load.image('celery_dead', 'celeryDead.png');
 	//font
