--- a/InsertNameHere.html
+++ b/InsertNameHere.html
@@ -155,7 +155,7 @@ function create()
 	video = game.add.video('video1');
 	video.play(false);    
 	sprite1 = video.addToWorld(0,0 );
-	skipText=game.add.bitmapText(490,650,'desyrel','Click to Skip',60);
+	skipText=game.add.bitmapText(530,650,'desyrel','Tap to Skip',60);
 	stateText=game.add.bitmapText(600,10,'desyrel','',16);
 	
 	//time elapsed
