--- a/InsertNameHere.html
+++ b/InsertNameHere.html
@@ -63,7 +63,23 @@ function preload(){
 
     game.load.image('celery_dead', 'food/celeryDead.png');
 
-    game.load.audio('bg_music', 'sounds/Kitchen_Ambiance.wav');
+    game.load.audio('bg_music', 'sounds/Kitchen_Ambience.ogg');
+
+    game.load.audio('death_noise1', 'sounds/FoodDeath_1.ogg');
+    game.load.audio('death_noise2', 'sounds/FoodDeath_2.ogg');
+    game.load.audio('death_noise3', 'sounds/FoodDeath_3.ogg');
+    game.load.audio('death_noise4', 'sounds/FoodDeath_4.ogg');
+    game.load.audio('death_noise5', 'sounds/FoodDeath_5.ogg');
+
+    game.load.audio('knife_cut1', 'sounds/Knife_1.ogg');
+    game.load.audio('knife_cut2', 'sounds/Knife_2.ogg');
+    game.load.audio('knife_cut3', 'sounds/Knife_3.ogg');
+
+    game.load.audio('plate_noise1', 'sounds/PlateHit_1.ogg');
+    game.load.audio('plate_noise2', 'sounds/PlateHit_2.ogg');
+    game.load.audio('plate_noise3', 'sounds/PlateHit_3.ogg');
+    
+    game.load.audio('cut_noise', 'sounds/Pepper_Cut.ogg');
 	//font
     game.load.bitmapFont('desyrel', 'desyrel.png', 'desyrel.xml');
 }
@@ -133,7 +149,6 @@ function create()
 {
 	game.add.image(0,0, 'background');
 	music = game.add.audio('bg_music');
-	music.play();
 	gameStartText = game.add.text(game.world.centerX, 380, "Cut Fresh Food and Drag it to the appropriate dish \n Don't slice rotten food! \n Tap anywhere to start. ", { font: "40px Arial", fill: "#ffffff", align: "center" });
 	video = game.add.video('video1');
 	video.play(false);    
@@ -592,10 +607,7 @@ function update()
 function isCutting(obj){
 	
 	if(game.input.x > obj.body.x && game.input.x < obj.body.right && game.input.y > obj.body.y && game.input.y < obj.body.bottom && isDrag){
-		if (obj.isRot==true &&obj.alive){score-=50;}
-		obj.alive=false;
-		obj.body.velocity.x=0;
-		obj.body.velocity.y=0;
+		setDead(obj);
 	}
 }
 function resetTimer1(obj)
@@ -620,10 +632,25 @@ function setPause(obj)
 }
 function setDead(obj)
 {
-	if (obj.isRot==true &&obj.alive){score-=50;}	
+	if (obj.isRot==true &&obj.alive){score-=50;}
+	if(obj.alive){
+		var num = Math.floor(Math.random()*5);
+		if(num === 1)
+			var noise = game.add.audio('death_noise1');
+		else if(num === 2)
+			var noise = game.add.audio('death_noise2');
+		else if(num === 3)
+			var noise = game.add.audio('death_noise3');
+		else if(num === 4)
+			var noise = game.add.audio('death_noise4');
+		else
+			var noise = game.add.audio('death_noise5');
+		noise.play();	
+	}
 	obj.alive=false;
 	obj.body.velocity.x=0;
-	obj.body.velocity.y=0;	
+	obj.body.velocity.y=0;
+
 }
 function dodge(st){
 	
@@ -752,7 +779,7 @@ function spawnDishes()
 			//spawn timer... 5000 = 5 sec.
 			if(crunchtime===false)
 			{
-				dishTime = (game.time.now + 5000+Math.random()*4000)/*-aScore*/;
+				dishTime = (game.time.now + 7000)/*-aScore*/;
 			}
 			else{
 				dishTime = (game.time.now + 2000+Math.random()*4000)/*-aScore*/;
@@ -767,7 +794,7 @@ function collision (obj1, obj2)
 	atexst2=obj2.name;
 	obj2.kill();
 	if(obj2.isRot===false)
-		{
+	{
 		if(obj1.i1)
 		{
 			if(obj2.name=== obj1.recipe[0])
