--- a/InsertNameHere.html
+++ b/InsertNameHere.html
@@ -21,13 +21,11 @@ sound
 function preload(){
 
 	//video
-	game.load.video('video1', 'Take2d.mp4');
+	game.load.video('video1', 'food/opening/Take2c.mp4');
 	//background
 	game.load.image ('background', 'Proj2_Background (1).png');
     //sprite for dish1
 	game.load.image('plate1', 'dish1plate.png');
-	game.load.image('ending1', 'BadEnding.png');
-	game.load.image('ending2', 'GoodEnding.png');
 	//sprite for dish2
     game.load.image('plate2', 'dish2plate.png');
     game.load.image('ticket', 'food/ticket.png');
@@ -86,12 +84,10 @@ function preload(){
 var vidDone=false;
 var atexst;
 var atexst2;
-var skipText;
-var gmText;
 var text1;
 var text2;
 var text3;
-var num1=10;
+var num1=0;
 var crunchtime=false;
 var spawnY=165;
 var p=true;
@@ -138,7 +134,6 @@ var h=600;
 var stop=true;
 var p=0;
 var stateText;
-var stateText2;
 var deadFood = [];
 //variable for 30 second warning
 var warningText;
@@ -153,11 +148,8 @@ function create()
 	video = game.add.video('video1');
 	video.play(false);    
 	sprite1 = video.addToWorld(0,0 );
-	skipText = game.add.bitmapText(530, 650, 'desyrel', 'Click to Skip!', 50 );
-	
 
 	stateText=game.add.bitmapText(600,10,'desyrel','',16);
-	stateText2=game.add.bitmapText(600,10,'desyrel','',16);
 	
 	//time elapsed
     timerText = game.add.bitmapText(10, 10, 'desyrel', '', 32);
@@ -333,7 +325,6 @@ function create()
 }
 function vidIsDone(){
 	vidDone=true;
-	skipText.destroy();
 	sprite1.destroy();
 }
 function setDragT()
@@ -349,11 +340,6 @@ function beginGame()
 {
 	if(inMenuScreen)
 	{
-		if(vidDone===false)
-		{
-			sprite1.destroy();
-			skipText.destroy();
-		}
 		gameStartText.visible=false;//get rid of menu
 		canSpawn=true;//set it so the veggies can spawn
 		inMenuScreen = false;
@@ -645,7 +631,15 @@ function setDead(obj)
 			var noise = game.add.audio('death_noise4');
 		else
 			var noise = game.add.audio('death_noise5');
-		noise.play();	
+		noise.play();
+		var num = Math.floor(Math.random()*3);
+		if(num === 1)
+			var sound = game.add.audio('knife_cut1');
+		else if(num === 2)
+			var sound = game.add.audio('knife_cut2');
+		else
+			var sound = game.add.audio('knife_cut3');
+		sound.play();
 	}
 	obj.alive=false;
 	obj.body.velocity.x=0;
@@ -720,20 +714,10 @@ function startTimer()
     {
     	if(score > 1500){
     		warningText.text = 'You win!';
-			game.add.image(0,0,'ending2');		
-			gmText = game.add.bitmapText(450, 50, 'desyrel', 'Game Over! You Won!', 50 );	
     	}
-    	else{
-			game.add.image(0,0,'ending1');
-        	warningText.text = 'Game Over.';
-			gmText = game.add.bitmapText(450, 50, 'desyrel', 'Game Over! You Lost', 50 );			
-			}
+    	else
+        	warningText.text = 'Game Over.'; 
         timerText.text = '';
-		stateText2=game.add.bitmapText(620,10,'desyrel','RESTART',35);		
-		stateText2.inputEnabled=true;
-		stateText2.events.onInputUp.add(function(){
-			window.location.reload(true);
-		});
         canSpawn=false;
     }
 
@@ -793,6 +777,14 @@ function collision (obj1, obj2)
 	atexst=obj1.name;
 	atexst2=obj2.name;
 	obj2.kill();
+	var num = Math.floor(Math.random()*3);
+	if(num === 1)
+		var pnoise = game.add.audio('plate_noise1');
+	else if(num === 2)
+		var pnoise = game.add.audio('plate_noise2');
+	else
+		var pnoise = game.add.audio('plate_noise3');
+	pnoise.play();
 	if(obj2.isRot===false)
 	{
 		if(obj1.i1)
@@ -832,7 +824,6 @@ function collision (obj1, obj2)
 				obj1.fin.children[j].visible = false;
 			}
 			obj1.reset(2000,800);*/
-			
 			obj1.finished = true;
 			compDishes++;
 		}
@@ -963,14 +954,14 @@ function resetDish2(dish)
 
 function createTomato()
 {
-	ranD = Math.floor(Math.random()*num1);
+	ranD = Math.floor(Math.random()*2);
 	if(ranD===1)
 	{
-		var aTomato = tomatoes.create(0,0,'tomatoRot');
-		aTomato.isRot=true;
-	}else{
 		var aTomato = tomatoes.create(0,0,'tomato');
 		aTomato.isRot=false;
+	}else{
+		var aTomato = tomatoes.create(0,0,'tomatoRot');
+		aTomato.isRot=true;
 	}
 	var right = aTomato.animations.add('right', [0, 1, 2, 3, 4, 5, 6, 7], 15, true);
 	var left = aTomato.animations.add('left', [8, 9, 10, 11, 12, 13, 14, 15], 15, true);
@@ -1051,14 +1042,14 @@ function resetTomato(item)
 function createWing()
 {
 	//create the variable with the first dish sprite
-	ranD = Math.floor(Math.random()*num1);
+	ranD = Math.floor(Math.random()*2);
 	if(ranD===1)
 	{
-		var aWing = wings.create(0,0,'wingRot');
-		aWing.isRot=true;
-	}else{
 		var aWing = wings.create(0,0,'wing');
 		aWing.isRot=false;
+	}else{
+		var aWing = wings.create(0,0,'wingRot');
+		aWing.isRot=true;
 	}
 	var right = aWing.animations.add('right', [0, 1, 2, 3, 4, 5, 6, 7], 15, true);
 	var left = aWing.animations.add('left', [8, 9, 10, 11, 12, 13, 14, 15], 15, true);
@@ -1140,14 +1131,14 @@ function resetWing(item)
 function createPepper()
 {
 	//create the variable with the first dish sprite
-	ranD = Math.floor(Math.random()*num1);
+	ranD = Math.floor(Math.random()*2);
 	if(ranD===1)
 	{
-		var aPepper = peppers.create(0,0,'pepperRot');
-		aPepper.isRot=true;
-	}else{
 		var aPepper = peppers.create(0,0,'pepper');
 		aPepper.isRot=false;
+	}else{
+		var aPepper = peppers.create(0,0,'pepperRot');
+		aPepper.isRot=true;
 	}
 	var right = aPepper.animations.add('right', [0, 1, 2, 3, 4, 5, 6, 7], 15, true);
 	var left = aPepper.animations.add('left', [8, 9, 10, 11, 12, 13, 14, 15], 15, true);
@@ -1231,14 +1222,14 @@ function createSteak()
 {
 
 	//create the variable with the first dish sprite   
-	ranD = Math.floor(Math.random()*num1);
+	ranD = Math.floor(Math.random()*2);
 	if(ranD===1)
 	{
-		var aSteak = steaks.create(0, 0, 'steakRot');
-		aSteak.isRot=true;
-	}else{
-		var aSteak = steaks.create(0,0,'steak');
+		var aSteak = steaks.create(0, 0, 'steak');
 		aSteak.isRot=false;
+	}else{
+		var aSteak = steaks.create(0,0,'steakRot');
+		aSteak.isRot=true;
 	}	
 	var right = aSteak.animations.add('right', [0, 1, 2, 3, 4, 5, 6, 7], 15, true);
 	var left = aSteak.animations.add('left', [8, 9, 10, 11, 12, 13, 14, 15], 15, true);
@@ -1320,14 +1311,14 @@ function resetSteak(item)
 function createPotato()
 {
 	//create the variable with the first dish sprite
-	ranD = Math.floor(Math.random()*num1);
+	ranD = Math.floor(Math.random()*2);
 	if(ranD===1)
 	{
-		var aPotato = potatoes.create(0,0, 'potatoRot');
-		aPotato.isRot=true;
-	}else{
-		var aPotato = potatoes.create(0,0,'potato');
+		var aPotato = potatoes.create(0,0, 'potato');
 		aPotato.isRot=false;
+	}else{
+		var aPotato = potatoes.create(0,0,'potatoRot');
+		aPotato.isRot=true;
 	}
 	var right = aPotato.animations.add('right', [0, 1, 2, 3, 4, 5, 6, 7], 15, true);
 	var left = aPotato.animations.add('left', [8, 9, 10, 11, 12, 13, 14, 15], 15, true);
@@ -1406,14 +1397,14 @@ function resetPotato(item)
 function createCelery()
 {
 	//create the variable with the first dish sprite
-	ranD = Math.floor(Math.random()*num1);
+	ranD = Math.floor(Math.random()*2);
 	if(ranD===1)
 	{
-		var aCelery = celeries.create(0, 0, 'celeryRot');
-		aCelery.isRot=true;
-	}else{
-		var aCelery = celeries.create(0,0,'celery');
+		var aCelery = celeries.create(0, 0, 'celery');
 		aCelery.isRot=false;
+	}else{
+		var aCelery = celeries.create(0,0,'celeryRot');
+		aCelery.isRot=true;
 	}
 	var right = aCelery.animations.add('right', [0, 1, 2, 3, 4, 5, 6, 7], 12, true);
 	var left = aCelery.animations.add('left', [8, 9, 10, 11, 12, 13, 14, 15], 12, true);
@@ -1447,7 +1438,7 @@ function spawnCelery()
         if (celery)
         {
 			celery.alive=true;
-			y = Math.floor(Math.random()*150)+100;
+			y = Math.floor(Math.random()*150)+spawnY;
 			if(ranD===1)
 			{
 				//spawn the dishes offscreen so they can go and move into the screen
