--- a/InsertNameHere.html
+++ b/InsertNameHere.html
@@ -77,6 +77,7 @@ function preload(){
     game.load.audio('plate_noise2', 'sounds/PlateHit_2.ogg');
     game.load.audio('plate_noise3', 'sounds/PlateHit_3.ogg');
     
+    game.load.audio('timer_noise', 'sounds/Timer_Bleep.ogg');
     game.load.audio('cut_noise', 'sounds/Pepper_Cut.ogg');
 	//font
     game.load.bitmapFont('desyrel', 'desyrel.png', 'desyrel.xml');
@@ -679,7 +680,11 @@ function startTimer()
 	timeElapsed=game.time.now - MenuDelayTime-p;
 	scoreText.text = 'Score: ' + score;
     timerText.text = 'Time Elapsed: 0:0' + Math.floor(Math.round(timeElapsed)/1000); //display the timer
-        
+    if (Math.floor(Math.round(timeElapsed)/1000) === 150)
+    {
+    	var tnoise = game.add.audio('timer_noise');
+    	noise.play();	
+    }
     if (Math.floor(Math.round(timeElapsed)/1000) >= 10) //making sure the seconds do not overflow
     {
         timerText.text = 'Time Elapsed: 0:' + Math.floor(Math.round(timeElapsed)/1000); 
