--- a/InsertNameHere.html
+++ b/InsertNameHere.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-<title>InsertTitleHere</title>
+<title>Hell's Kitchen</title>
 
 <script type="text/javascript" src="js/phaser.js"></script>
 </head>
